# hklii-drug-trafficing-sentence-predictor

./: .gitignore  AGENTS.md  README.md  todo.md  vercel.json
featureExtraction/: README.md  createIndex.py  db.py  deduplicateJudgements.py  detectJudgementLanguage.py  extractFeature.py  insertJudgementsToDB.py  pyproject.toml  requirements.txt  sampleCase.txt  testSchema.py
featureExtraction/extract/: config.py  pipeline.py  runner.py
featureExtraction/sampleJudgments/: README.md  appeal-from.htm  appeal.htm  case-with-corrigendum.htm  corrigendum.htm  multi-d-multi-dt+ndt.htm  multi-d-multi-dt.htm  multi-d-single-dt.htm  single-d-dt+ndt.htm  single-d-multi-dt.htm  single-d-single-dt.htm
featureExtraction/schema/: README.md  __init__.py  caseBasics.py  common.py  defendantProfile.py  defendants.py  features.txt  judgement.py  sentenceDetail.py  trials.py
featureExtraction/schema/exampleOutput/: caseBasics.json  defendantProfile.json  sentenceDetail.json
featureExtraction/schema/exampleOutput/appeal/: caseBasics.json  defendants.json  judgement.json  trials.json
featureExtraction/schema/exampleOutput/corrigendum/: caseBasics.json  defendants.json  judgement.json  trials.json
featureExtraction/schema/exampleOutput/multi-d-multi-dt+ndt/: caseBasics.json  defendants.json  judgement.json  trials.json
featureExtraction/schema/jsonSchema/: caseBasics.json  defendantOffence.json  defendantProfile.json  defendants.json  judgement.json  trials.json
featureExtraction/utils/: extractReasoningSummary.py  hkDistricts.py  htmlToText.py
featureVerification/: .cta.json  (+11 more)
(+139 files in other folders)
